made the full website responsive based on mobile device, slight correction needed

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@
     background-color: rgb(244, 244, 244);
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding: 10px;
     gap: 30px;
     text-align: center;
@@ -140,7 +140,7 @@
 }
 
 .you_may_check_section h4{
-    font-size: 13px;
+    font-size: 0.8rem;
     font-weight: 500;
     opacity: 0.9;
     margin-top: 10px;
@@ -151,17 +151,19 @@
 
 .hot_deal_section{
     width: 1280px;
-    height: 353px;
+    /* height: 353px; */
     margin: 100px auto 0px;
     display: flex;
     align-items: center ;
     justify-content: center;
     background-color: rgb(254, 246, 248);
-    /* gap: 50px; */
+    padding-top: 25px;
+    padding-bottom: 25px;
+    gap: 40px;
 }
 
 .hot_deal_text_container{
-    width: 60%;
+    width: 70%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -206,6 +208,8 @@
     height: 240px;
 }
 
+/* instagram section starts here */
+
 .instagram_section{
     width: 821px;
     height: 328px;
@@ -237,7 +241,7 @@
     flex-wrap: wrap;
 }
 
-
+/* get the deal section starts here */
 .get_the_deals_section{
     width: 821px;
     height: 256px;
@@ -371,7 +375,6 @@ footer h2{
 
     .shop_now_btn{          
         transform: translateX(-180px);
-
         font-size: 10px;         
         padding: 10px 12px;
         color: white;
@@ -387,20 +390,221 @@ footer h2{
         margin-left: 40%;
     }
 
-    .featured_image_container{
-        margin-left: 20px;
-        margin-right: 20px;
+
+
+    /* feature image section starts here */
+    .featured_flower_section{
+       
+        width: 100%;
+        /* height: 456px; */
+        margin: 50px auto;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;        
     }
 
+    .featured_text_container h2{
+        font-size: 35px;
+    }    
+    .featured_text_container p{
+        font-size: 14px;
+        opacity: 0.7;
+    }
+
+    .featured_image_container{
+        
+        width: 95%;
+        gap: 2.5%;
+        
+    }
+
+    .flower_1{
+        
+        width: 182.4px;
+        height: 300px;
+        background-color: rgb(242, 222, 231);
+        border-radius: 50% 50% 0 0;
+    }
+    
+    .flower_2{
+        
+        width: 182.4px;
+        height: 300px;
+        background-color: rgb(217, 239, 241);
+        border-radius: 50% 50% 0 0;
+    
+    }
+    
+    .flower_3{
+        
+        width: 182.4px;
+        height: 300px;
+        background-color: rgb(227, 235, 219);
+        border-radius: 50% 50% 0 0;
+    }
+
+    .featured_image_container img{
+        width: 170px;
+        height: 244px;
+        margin-top: 57px;
+    }
+
+    /* instagram section starts here */
+
     .instagram_section_image_container img{
-        width: 182px;
+        width: 100%;
         height: 220px;
         /* flex-wrap: wrap; */
     }
 
-    .featured_flower_section{
-        margin-left: auto;
-        margin-right: auto;
+    /* you may check section starts here */
+    .you_may_check_section{
+        max-width: 576px;       
+        margin: 0 auto;  
+        margin-top: 120px;      
+        /* align-items: center; */
+        /* justify-content: center; */       
+        gap: 15px;
+        text-align: center;
+       
     }
-  
+
+    .you_may_check_section div{
+        /* border: 1px solid saddlebrown; */
+        width: 30%;
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .you_may_check_section h4{
+        font-size: 0.6rem;
+        font-weight: 500;
+        opacity: 0.9;
+        margin-top: 10px;
+    }
+
+    .you_may_check_section img{
+        width: 50%;
+        height: 60%;
+    }
+
+
+
+    .hot_deal_section{
+        max-width: 576px;
+        /* height: 0px; */
+        gap: 5px;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    
+
+    .hot_deal_text_container{
+        margin-left: 30px;
+    }
+
+    
+    .hot_deal_text_container h1{
+        font-size: 25px;
+    }
+    
+    .hot_deal_text_container p{
+        width: 75%;
+        font-size: 10px;
+        
+    }
+    
+    .sign_btn{
+        font-size: 12px;    
+        /* transform: translateY(-170px); */
+        padding: 8px 15px;
+    }
+    
+    
+    .hot_deal_image_container img{
+        width: 70%;
+        height: 70%;
+    }
+
+
+    /* instagram section mobile device */    
+    .instagram_section{
+        max-width: 576px;  
+        height: auto;
+        margin-bottom: 100px;     
+    }
+
+    .instagram_section_text_container h1{
+        font-size: 30px;
+    }
+
+    .instagram_section_text_container p{
+        margin-top: 10px;
+        font-size: 13px;
+        opacity: 0.7;
+    }
+
+    .instagram_section_image_container{
+        margin-top: 30px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        justify-content: center;
+        gap: 15px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .instagram_section_image_container img{
+        width: 100%;
+        height: 100%;
+        flex-wrap: wrap;
+    }
+
+
+    /* get the deal for mobile device */
+    .get_the_deals_section{
+        width: 480px;
+        height: 256px;
+        margin: 50px auto;
+        margin-top: 100px;
+        background-color: rgba(57, 153, 24, 0.2);
+        background-image: url('get_deal.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        background-blend-mode: overlay;
+        
+    }
+    
+    .get_the_deals_section h2{
+        font-size: 1.8rem;
+        font-weight: 800;
+        
+    }
+    
+    .get_the_deals_section p{
+        margin-top: 15px;
+        font-size: 0.9rem;
+        font-weight: 300;
+    }
+    
+    .get_the_deals_section input[type="email"]{
+        width: 300px;
+        height: 23px;
+        border: none;
+        border-radius: 8px;
+        padding: 10px;
+        box-shadow: 5px 5px 15px gray;
+        
+    }
+    
+    footer{
+        max-width: 576px;
+    } 
 }
